kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-backend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-backend
  template:
    metadata:
      labels:
        app: expensy-backend
    spec:
      containers:
        - name: backend
          # REPLACE 'yourusername' with your actual Docker Hub profile username
          image: ahsan4321/expensy-backend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 8706
