kubernetes/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: expensy-frontend
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: expensy-frontend
  template:
    metadata:
      labels:
        app: expensy-frontend
    spec:
      containers:
        - name: frontend
          image: ahsan4321/expensy-frontend:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
