kubernetes/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  namespace: default
spec:
  type: ClusterIP
  ports:
    - port: 8706
      targetPort: 8706
      protocol: TCP
  selector:
    app: expensy-backend
