kubernetes/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: default
spec:
  type: ClusterIP          
  ports:
    - port: 3000
      targetPort: 3000
      protocol: TCP
  selector:
    app: expensy-frontend
