kubernetes/mongo-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-service
  namespace: default
spec:
  ports:
    - port: 27017
      targetPort: 27017
  selector:
    app: mongo
